aplicacion de css con la paqueteria de bootstrap a la interfaz de usuario

--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,1 +1,12 @@
-<p>product-item works!</p>
+<div class="card text-center mb-3">
+  <img src="https://m.media-amazon.com/images/I/81Tf5V4xgpL._AC_UY218_.jpg" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Title</h5>
+    <p class="card-text">Description</p>
+    <p class="card-text">Price</p>
+    <button href="#" class="btn btn-outline-success">
+      <i class="fas fa-cart-plus"></i>
+      Add to Cart
+    </button>
+  </div>
+</div>
