--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,20 @@
-<p>cart works!</p>
+<div class="alert alert-info text-center" role="alert">
+  <h4>Your Cart</h4>
+</div>
+<div class="text-center">
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let product of [1,2,3,4,5]">
+      <div class="row">
+        <div class="com-md-10">
+          <app-cart-item></app-cart-item>
+        </div>
+        <div class="col-md-2">
+          <i class="far fa-trash-alt fa-2x"></i>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<div class="alert alert-warning text-center" role="alert">
+  <strong>Total: </strong>$ 2,000
+</div>
