Funcionalidad agregar productos al carrito

--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -4,7 +4,7 @@
     <h5 class="card-title">{{product.name}}</h5>
     <p class="card-text">{{product.description}}</p>
     <p class="card-text">$ {{product.price}}</p>
-    <button href="#" class="btn btn-outline-success">
+    <button href="#" class="btn btn-outline-success" (click)="addToCart()">
       <i class="fas fa-cart-plus"></i>
       Add to Cart
     </button>
