--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -1,1 +1,7 @@
-<p>name: <strong>1</strong> units: <strong>$ 1,227.58</strong></p>
+<p>
+  <strong>
+    {{ cartItem.productName }}
+    ({{ cartItem.qty }} units):
+    $ {{ cartItem.qty * cartItem.productPrice | number: '1.1-2' }}
+  </strong>
+</p>
