--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,10 +3,10 @@
 </div>
 <div class="text-center">
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let product of [1,2,3,4,5]">
+    <li class="list-group-item" *ngFor="let item of cartItems">
       <div class="row">
         <div class="com-md-10">
-          <app-cart-item></app-cart-item>
+          <app-cart-item [cartItem]="item"></app-cart-item>
         </div>
         <div class="col-md-2">
           <i class="far fa-trash-alt fa-2x"></i>
