--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,20 +1,31 @@
-<div class="alert alert-info text-center" role="alert">
-  <h4>Your Cart</h4>
-</div>
-<div class="text-center">
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of cartItems">
-      <div class="row">
-        <div class="com-md-10">
-          <app-cart-item [cartItem]="item"></app-cart-item>
+<ng-container *ngIf="cartItems.length < 1 ; else elseTemplate">
+  <div class="alert alert-info text-center" role="alert">
+    <h4>Your Cart is Empty</h4>
+  </div>
+</ng-container>
+<ng-template #elseTemplate>
+  <div class="alert alert-info text-center" role="alert">
+    <h4>Your Cart</h4>
+  </div>
+  <div class="text-center">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let item of cartItems; index as i">
+        <div class="row">
+          <div class="col-10">
+            <app-cart-item [cartItem]="item"></app-cart-item>
+          </div>
+          <div class="col-2">
+            <i class="far fa-trash-alt fa-2x" (click)="deleteItem(i)"></i>
+          </div>
         </div>
-        <div class="col-md-2">
-          <i class="far fa-trash-alt fa-2x"></i>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
-<div class="alert alert-warning text-center" role="alert">
-  <strong>Total: </strong>$ 2,000
-</div>
+      </li>
+    </ul>
+  </div>
+  <div class="alert alert-warning text-center" role="alert">
+    <strong>Total: </strong>$ {{ total }}
+  </div>
+  <button class="btn btn-outline-danger btn-block" (click)="emptyCart()">
+    <i class="fas fa-ban"></i> Empty Cart
+  </button>
+
+</ng-template>
