Correcion de las variables enciadas a paypal, mostrar modal con datos de los productos comprados

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+  <p style="font-size: 20px; color: white">making payment...</p>
+</ngx-spinner>
+
 <ng-container *ngIf="cartItems.length < 1 ; else showCart">
   <div class="alert alert-info text-center" role="alert">
     <h4>Your Cart is Empty</h4>
