--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,1 +1,25 @@
-<p>modal works!</p>
+<div class="modal-header">
+  <h5 class="modal-title">Pruchese OK!!</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+    (click)="activeModal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <h5>Your shopping</h5>
+  <hr>
+  <div *ngFor="let item of items">
+    <div class="row py-2">
+      <div class="col-8">
+        {{ item.name }}
+      </div>
+      <div class="col-4 d-flex align-items-center  justify-content-end">
+        <span class="text-danger"><b>{{ item.quantity }} X {{ item.unit_amount.value | currency}}</b></span>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="d-flex justify-content-end">
+    <p>Total: <b class="pl-3">{{ amount | currency }}</b></p>
+  </div>
+</div>
