Visualizacion de datos necesarios

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,22 +4,22 @@
       <div class="col-6 col-md">
         <h5>Features</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
+          <!-- <li><a class="text-muted" href="#">Cool stuff</a></li> -->
+          <!-- <li><a class="text-muted" href="#">Random feature</a></li> -->
         </ul>
       </div>
       <div class="col-6 col-md">
         <h5>Resources</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
+          <!-- <li><a class="text-muted" href="#">Resource</a></li> -->
+          <!-- <li><a class="text-muted" href="#">Resource name</a></li> -->
         </ul>
       </div>
       <div class="col-6 col-md">
         <h5>About</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Team</a></li>
-          <li><a class="text-muted" href="#">Locations</a></li>
+          <!-- <li><a class="text-muted" href="#">Team</a></li> -->
+          <!-- <li><a class="text-muted" href="#">Locations</a></li> -->
         </ul>
       </div>
     </div>
